# fde_advanced_week1_project

./: .dockerignore  .gitignore  CLAUDE.md  PLAN.md  PROGRESS.md  README.md  compose.yaml  dvc.yaml  main.py  pyproject.toml  requirements.txt
.dvc/: config
.github/workflows/: ci.yml
.streamlit/: config.toml
EDA/: EDA_FINDINGS.md  README.md  aspects.py  dashboard.py  data_dictionary.py  make_findings.py  mappings.py  profile.py  run.sh
EDA/artifacts/: column_analysis.json  eda_facts.json
data/featurized/: .gitignore
data/monitoring/: .gitignore  reference.parquet.dvc
data/prepared/: .gitignore
data/raw/: diabetic_data.csv.dvc
deploy/: Containerfile  alerts.yml  export_model.py  prometheus.yml  requirements-serve.in  requirements-serve.txt
deploy/model_bundle/: model_meta.json
docs/: CAVEATS.md  CLASS_CONTEXT.md  DATA_VALIDATION.md  FAIRNESS_AUDIT.md  FEATURE_LOG.md  GOALS.md  MODEL_CARD.md  MODEL_COMPARISON.md  MONITORING.md  PROBLEM_STATEMENT.md  PROJECT_BRIEF.md  REFLECTION.md  RESUME_HERE.md  SERVING.md  THRESHOLD_DECISION.md
docs/screenshots/: README.md
reports/monitoring/: drift_summary.json
reports/validation/: processed_status.json  raw_status.json
src/app/: __init__.py  app.py  audit.py  featurize.py  model.py  schemas.py
src/contracts/: __init__.py  data_contract.py  input_contract.json
src/data/: clean.py  validate.py
src/features/: build_features.py
tests/: _serving_helpers.py  conftest.py  sample_request.json  test_container_smoke.py  test_smoke.py  test_tier1_schema.py  test_tier2_skew.py  test_tier3_behavior.py
(+23 files in other folders)
