[project]
name = "readmission-starter"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "catboost>=1.2.10",
    "dvc>=3.50",
    "evidently>=0.4",
    "fairlearn>=0.10",
    "fastapi>=0.110",
    "httpx>=0.27",
    "kaggle>=1.6",
    "matplotlib>=3.10.0",
    "mlflow>=2.12",
    "numpy>=1.26",
    "pandas>=2.1",
    "plotly>=5.22",
    "prometheus-fastapi-instrumentator>=7.0",
    "pydantic>=2.6",
    "pytest>=8.0",
    "scikit-learn>=1.4",
    "shap>=0.45",
    "streamlit>=1.40",
    "uvicorn[standard]>=0.29",
    "xgboost>=2.0",
    "ydata-profiling>=4.7",
]
